--- a/README.rdoc
+++ b/README.rdoc
@@ -31,3 +31,9 @@ email: string
 - Restrict actions like create recipe, edit recipe and like feature to logged in chefs only
 - Restricting edit of recipes by chefs who created the recipes
 - 
+
+Implementing Many to Many Association:
+
+1. We will implement using has_many through association
+2. Requires a join table
+3. One Object/row in one table can be associated with multiple rows in a 2nd table and vice-versa
