--- a/README.rdoc
+++ b/README.rdoc
@@ -38,3 +38,4 @@ Implementing Many to Many Association:
 2. Requires a join table
 3. One Object/row in one table can be associated with multiple rows in a 2nd table and vice-versa
 
+Admin Functionality:
